--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         <br>
         <p>Each time the game starts, the values of each crystal will reset</p>
     </div>
+
+    <!-- Random number -->
+    <div id="random"></div>
+
+    <!-- win/lose -->
+    <div id="counter"></div>
+
+    <!-- crystals -->
+    <div id="crystal1"></div>
+    <div id="crystal2"></div>
+    <div id="crystal3"></div>
+    <div id="crystal4"></div>
     
 </body>
 </html>
