--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <div id="random"></div>
 
         <!-- win/lose -->
-        <div id="counter"></div>
+        <div id="counter">
+            Wins: <div id="wins"></div>
+            Losses:<div id="losses"></div>
+
+        </div>
 
     </div>
 
